vlib/v/checker/tests/generics_type_ambiguous.out
vlib/v/checker/tests/generics_type_ambiguous.vv:6:18: error: cannot use `int literal` as `string` in argument 4 to `test`
    4 | 
    5 | fn main() {
    6 |     test(2, 2, '2', 2)
      |                     ^
    7 | }
